unpackaged/objects/SessaoCash__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Jogador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessões Jogador</relationshipLabel>
        <relationshipName>Sess_es_Cash</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CobrarTaxa__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cobrar Taxa de Pagamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataFechamento__c</fullName>
        <label>Data Fechamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataInicioSessao__c</fullName>
        <label>Data Inicio Sessão</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FichaDevolvida__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Fichas Devolvidas</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormaPagamento__c</fullName>
        <label>Forma de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão/Débito</fullName>
                </value>
                <value>
                    <fullName>Cartão/Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SessaoCaixa__c</fullName>
        <label>Sessão Caixa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SessaoCaixa__c.Status__c</field>
                <operation>equals</operation>
                <value>Aberta</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SessaoCaixa__c</referenceTo>
        <relationshipLabel>Sessões Jogador</relationshipLabel>
        <relationshipName>Sessao_Jogador</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberta</fullName>
                    <default>true</default>
                    <label>Aberta</label>
                </value>
                <value>
                    <fullName>Fechada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalFichasPendente__c</fullName>
        <label>Total Fichas Pendentes</label>
        <summarizedField>CompraFicha__c.Fichas__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Aberta</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichas__c</fullName>
        <label>Total Fichas</label>
        <summarizedField>CompraFicha__c.Fichas__c</summarizedField>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPagoCartaoCredito__c</fullName>
        <label>Total Pago Cartão/Crédito</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Paga</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CompraFicha__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Crédito</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPagoCartaoDebito__c</fullName>
        <label>Total Pago Cartão/Débito</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Paga</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CompraFicha__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Débito</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPagoDinheiro__c</fullName>
        <label>Total Pago Dinheiro</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Paga</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CompraFicha__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Dinheiro</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UsuarioFechamento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referencia ao usuário que efetuou a Ação de fechamento da sessão do jogador</description>
        <inlineHelpText>Referencia ao usuário que efetuou a Ação de fechamento da sessão do jogador</inlineHelpText>
        <label>Usuário Fechamento</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sessoes_Jogador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValorCompra__c</fullName>
        <label>Valor da Compra</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalPago__c</fullName>
        <label>Valor Total Pago (+)</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Paga</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalPendente__c</fullName>
        <label>Valor Total Pendente (-)</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryFilterItems>
            <field>CompraFicha__c.Status__c</field>
            <operation>equals</operation>
            <value>Aberta</value>
        </summaryFilterItems>
        <summaryForeignKey>CompraFicha__c.SessaoCash__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total (=)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sessão Jogador</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Cliente__c</columns>
        <columns>Status__c</columns>
        <columns>ValorCompra__c</columns>
        <columns>ValorTotal__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>SJ-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessões Jogador</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>